manifests/base/simpleapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
        - name: simpleapp
          imagePullPolicy: Always
          image: tvminh/simpleapp:latest 
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
spec:
  selector:
    app: simpleapp
  ports:
    - port: 3000
      targetPort: http
