manifests/base/simpleapp/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simpleapp
spec:
  host: simpleapp.dev.svc.cluster.local
  subsets:
    - name: prod
      labels:
        version: prod
    - name: canary
      labels:
        version: canary
